# aegis-lens

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.prod  IRIS_MEDIAPIPE_INTEGRATION_REPORT.md  LICENSE  Makefile  PROJECT_HISTORY.txt  README.md  dev-setup.ps1  docker-compose.yml  package.json  pyproject.toml  requirements.txt  test_chronos_echo.html  test_iris_brutal.html  test_iris_full.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chronos-ci.yml  ci-javascript.yml  ci-python.yml  ci-rust.yml  docker-build.yml
docs/: API_DESIGN.md  CHRONOS.md  ECHO.md  SSL_SETUP.md  WEBSOCKET_PROTOCOL.md
k8s/: hpa.yaml  ingress.yaml  network-policies.yaml
kubernetes/: .env.example  README.md  deploy.sh
kubernetes/base/: kustomization.yaml  namespace.yaml
kubernetes/base/configmaps/: neo4j-config.yaml  postgres-config.yaml  redis-config.yaml  timescale-config.yaml
kubernetes/base/neo4j/: deployment.yaml  pvc.yaml  service.yaml
kubernetes/base/postgres/: deployment.yaml  pvc.yaml  service.yaml
kubernetes/base/redis/: deployment.yaml  pvc.yaml  service.yaml
kubernetes/base/timescaledb/: deployment.yaml  pvc.yaml  service.yaml
nginx/: nginx.conf
