[workspace]
members = [
    "packages/chronos",
    "packages/echo",
    "packages/iris",
    "packages/lipsync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aegis Lens Team"]
license = "MIT"
repository = "https://github.com/Lucieran-Raven/aegis-lens"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
neo4j = "0.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Testing
mockall = "0.12"
